--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "ssh2-sftp-client": "^5.1.3"
   },
   "devDependencies": {
     "concurrently": "^5.2.0"
