--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "node-n-body",
   "version": "1.0.0",
-  "homepage":"https://mfn.uber.space/",
+  "homepage": "https://mfn.uber.space/",
   "scripts": {
     "client": "cd client && npm start",
     "server": "nodemon server.js",
     "development": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "production": "cd client && npm run build && cd .. && node server.js"
+    "production": "npm install && cd client && npm install && npm run build && cd .. && node server.js"
   },
   "dependencies": {
     "express": "^4.16.4",
+    "pm2": "^4.4.0",
     "ssh2-sftp-client": "^5.1.3"
   },
   "devDependencies": {
     "concurrently": "^5.2.0"
   },
   "nodemonConfig": {
-    "ignore": ["data/*"]
+    "ignore": [
+      "data/*"
+    ]
   }
 }
