--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "client": "cd client && npm start",
     "server": "nodemon server.js",
     "development": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-    "production": "npm install && cd client && npm install && npm run build && cd .. && node server.js"
+    "production": "npm install && cd client && npm install && npm run build"
   },
   "dependencies": {
     "express": "^4.16.4",
-    "pm2": "^4.4.0",
     "ssh2-sftp-client": "^5.1.3"
   },
   "devDependencies": {
-    "concurrently": "^5.2.0"
+    "concurrently": "^5.2.0",
+    "pm2": "^4.4.0"
   },
   "nodemonConfig": {
     "ignore": [
